Add title, css link, css file, basic structure for index file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>SELENIUM TEST PAGE INDEX</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<a href="buttons.html">buttons</a>
+	<div class="TOP"><h1>Hello World</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+	</div>
+	<div class="CENTER">
+		<div class="LEFT">
+			<p>Links</p>
+			<a href="buttons.html">buttons</a>
+		</div>
+		<div class="MIDDLE">
+			<p>Links</p>
+			<a href="buttons.html">buttons</a>
+		</div>
+		<div class="RIGHT">
+			<p>Links</p>
+			<a href="buttons.html">buttons</a>
+		</div>
+	</div>
+	<div class="BOTTOM"></div>
 </body>
 </html>
