Align center-middle content in center of div

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
-	<div class="TOP"><h1>Hello World</h1>
+	<div class="TOP">
+		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
 	</div>
 	<div class="CENTER">
