Add test.html with all elements

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	</div>
 	<div class="CENTER">
 		<div class="LEFT">
-			<p>Links</p>
-			<a href="buttons.html">buttons</a>
+			<p>Links to element types:</p>
+			<a href="test.html">test</a>
 		</div>
 		<div class="MIDDLE">
 			<p>Links</p>
